tests/ui/rfcs/rfc-2126-crate-paths/crate-path-non-absolute.stderr
error[E0433]: `crate` in paths can only be used in start position
  --> $DIR/crate-path-non-absolute.rs:5:22
   |
LL |         let s = ::m::crate::S;
   |                      ^^^^^ can only be used in path start position

error[E0433]: global paths cannot start with `crate`
  --> $DIR/crate-path-non-absolute.rs:6:20
   |
LL |         let s1 = ::crate::S;
   |                    ^^^^^ cannot start with this

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
